# monitor_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  htpasswd  nginx.conf  script_docker.sh  services.toml
monitor_server/DEBIAN/: control
src/: config.rs  logging.rs  main.rs
src/handlers/: status.rs
src/models/: errors.rs  mod.rs  templates.rs
src/security/: auth.rs  htaccess.rs  mod.rs
src/services/: docker.rs  hardware.rs  mod.rs  service_checker.rs
templates/: status.html
