[package]
name = "monitor_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.9.0"
askama = "0.12.1"
base64 = "0.22.1"
bcrypt = "0.16.0"
bollard = "0.18.1"
chrono = "0.4.39"
config = "0.15.4"
env_logger = "0.11.6"
fern = "0.7.1"
futures-util = "0.3.31"
get_if_addrs = "0.5.3"
hostname = "0.4.0"
htpasswd-verify = "0.3.0"
libc = "0.2.169"
log = "0.4.22"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
